--- a/HTMLClassExerciseF16/web/index.html
+++ b/HTMLClassExerciseF16/web/index.html
@@ -9,9 +9,19 @@
 
 <body>
     <header>
-        <img id="image" src="images/pumpkin.gif" alt="Pumpkin">
+        <a href=".">
+            <img id="image" src="images/pumpkin.gif" alt="Pumpkin"> </a>
+            
         <h1 id="header">The Halloween Store</h1>
-        <h2 id="goblin">For the little Goblin in all of us!</h2>    
+        <h2 id="goblin">For the little Goblin in all of us!</h2>
+        
+        <ul class="topNav">
+            <li><a href=".">Home</a></li>
+            <li><a href="product">Product List</a></li>
+            <li><a href="personal">Personal</a></li>
+            <li><a href="decorating">Decorating Ideas</a></li>
+            <li><a href="email">Join Email</a></li>
+        </ul>
     </header>
     <div class="content">
     <main>
@@ -27,17 +37,19 @@
         </div>
         <section>
         <h2 id="product">Product of the week</h2>
+        <a href="products/cat.html">
         <img id="cat" src="images/cat1.jpg" alt="cat">
+        </a>
         <ul>
         <li id="catpic"><a href="products/cat.html" title="link to product of the week">20" Deranged Cat</a></li>
         </ul>
         <nav>
             <div id="list">
         <ul>
-            <li><a href="products/props.htm" title="link to props page">Props</a></li>
-            <li><a href="products/costumes.htm" title="link to costumes page">Costumes</a></li>
-            <li><a href="products/specialeffects.htm" title="link to special effects page">Special Effects</a></li>
-            <li><a href="products/masks.htm" title="link to masks page">Masks</a></li>
+            <li><a class="aa" href="products/props.htm" title="link to props page">Props</a></li>
+            <li><a class="aa" href="products/costumes.htm" title="link to costumes page">Costumes</a></li>
+            <li><a class="aa" href="products/specialeffects.htm" title="link to special effects page">Special Effects</a></li>
+            <li><a class="aa" href="products/masks.htm" title="link to masks page">Masks</a></li>
         </ul>
             </div>
         </nav>
