--- a/HTMLClassExerciseF16/web/index.html
+++ b/HTMLClassExerciseF16/web/index.html
@@ -16,8 +16,8 @@
         <h2 id="goblin">For the little Goblin in all of us!</h2>
         
         <ul class="topNav">
-            <li><a href=".">Home</a></li>
-            <li><a href="product">Product List</a></li>
+            <li><a class="home" href=".">Home</a></li>
+            <li><a href="../productlist/productli.html">Product List</a></li>
             <li><a href="personal">Personal</a></li>
             <li><a href="decorating">Decorating Ideas</a></li>
             <li><a href="email">Join Email</a></li>
