--- a/HTMLClassExerciseF16/web/products/cat.html
+++ b/HTMLClassExerciseF16/web/products/cat.html
@@ -17,7 +17,7 @@
         <h2 id="goblin">For the little Goblin in all of us!</h2>
         
         <ul class="topNav">
-            <li><a href="home">Home</a></li>
+            <li><a href="../index.html" title="link to home">Home</a></li>
             <li><a href="product">Product List</a></li>
             <li><a href="personal">Personal</a></li>
             <li><a href="decorating">Decorating Ideas</a></li>
@@ -62,7 +62,7 @@
                 </td>
             </tr>
         </table>
-        <p id="p">This cat provides its own light <br />and is perfect for a backyard <br />haunting <br /> <b>Price: 19.99</b>:</p>
+        <p id="p">This cat provides its own light <br />and is perfect for a backyard <br />haunting <br /> <b>Price: 19.99</b></p>
     </main>
     </div>
     <footer>
